# vec1

./: CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md
.github/workflows/: validate-commit.yml
src/: lib.rs  shared.rs  smallvec_v1.rs  t.rs
tests/: issue_13_tailing_comman.rs
