[package]
version = "1.5.0"
authors = ["Philipp Korber <philippkorber@gmail.com>"]
categories = ["data-structures"]
description = "a std Vec wrapper assuring that it has at least 1 element"
documentation = "https://docs.rs/vec1"
keywords = ["vec", "min", "length", "1"]
license = "MIT OR Apache-2.0"
name = "vec1"
readme = "./README.md"
repository = "https://github.com/rustonaut/vec1/"

[features]
# Keep feature as to not brake code which used it in the past.
# The Vec1 crate roughly traces rust stable=1 but tries to keep
# as much compatiblility with older compiler versions. But it
# should never require changes to older projects compiled with
# a new enough rust compiler. As such this features needs to
# stay in existence.
unstable-nightly-try-from-impl = []

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
