[package]
version = "1.6.0"
authors = ["Philipp Korber <philipp@korber.dev>"]
categories = ["data-structures"]
description = "a std Vec wrapper assuring that it has at least 1 element"
documentation = "https://docs.rs/vec1"
keywords = ["vec", "min", "length", "1"]
license = "MIT OR Apache-2.0"
name = "vec1"
readme = "./README.md"
repository = "https://github.com/rustonaut/vec1/"
edition = "2018"

[features]
# Keep feature as to not brake code which used it in the past.
# The Vec1 crate roughly traces rust stable=1 but tries to keep
# as much compatiblility with older compiler versions. But it
# should never require changes to older projects compiled with
# a new enough rust compiler. As such this features needs to
# stay in existence.
unstable-nightly-try-from-impl = []
smallvec-v1 = ["smallvec_v1_"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
# In the future we will support smallvec v1 and v2 so if we had
# a optional dependency called smallvec people might acidentally
# pull it in as feature and create anoyences wrt. backward compatibility.
smallvec_v1_ = { package = "smallvec",  version = "1.6.1", optional = true}

[dev-dependencies]
serde_json = "1.0"
